# CNN

./: .gitignore  README.md
cpu/: CMakeLists.txt  xmake.lua
cpu/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cpu/checkpoints/AlexNet/: iter_100000_train_1.000_valid_0.790.model  iter_105000_train_1.000_valid_0.797.model  iter_20000_train_0.927_valid_0.793.model  iter_35000_train_0.996_valid_0.793.model  iter_45000_train_1.000_valid_0.797.model  iter_5000_train_0.761_valid_0.803.model  iter_55000_train_1.000_valid_0.793.model  iter_65000_train_1.000_valid_0.790.model  iter_70000_train_1.000_valid_0.807.model  iter_75000_train_1.000_valid_0.793.model  iter_80000_train_1.000_valid_0.797.model  iter_85000_train_1.000_valid_0.793.model  iter_90000_train_1.000_valid_0.797.model  iter_95000_train_1.000_valid_0.800.model
cpu/checkpoints/AlexNet_1e-3/: iter_10000_train_0.843_valid_0.813.model  iter_15000_train_0.881_valid_0.790.model  iter_25000_train_0.957_valid_0.787.model  iter_30000_train_0.987_valid_0.787.model  iter_40000_train_0.999_valid_0.783.model  iter_50000_train_1.000_valid_0.793.model  iter_60000_train_1.000_valid_0.800.model
cpu/checkpoints/AlexNet_aug/: iter_15000_train_0.751_valid_0.807.model  iter_25000_train_0.781_valid_0.837.model  iter_30000_train_0.789_valid_0.833.model  iter_35000_train_0.798_valid_0.840.model  iter_5000_train_0.657_valid_0.750.model
cpu/checkpoints/AlexNet_aug_16/: iter_10000_train_0.879_valid_0.793.model  iter_15000_train_0.923_valid_0.817.model  iter_20000_train_0.963_valid_0.803.model  iter_25000_train_0.988_valid_0.827.model  iter_30000_train_0.999_valid_0.820.model  iter_35000_train_1.000_valid_0.810.model  iter_5000_train_0.804_valid_0.787.model
cpu/checkpoints/AlexNet_aug_1e-3/: iter_100000_train_0.846_valid_0.863.model  iter_10000_train_0.720_valid_0.813.model  iter_105000_train_0.844_valid_0.870.model  iter_110000_train_0.845_valid_0.883.model  iter_115000_train_0.856_valid_0.870.model  iter_120000_train_0.864_valid_0.873.model  iter_125000_train_0.863_valid_0.860.model  iter_130000_train_0.865_valid_0.877.model  iter_135000_train_0.865_valid_0.883.model  iter_140000_train_0.867_valid_0.883.model  iter_145000_train_0.871_valid_0.893.model  (+64 more)
cpu/include/: architectures.h  data_format.h  func.h  metrics.h  pipeline.h
cpu/src/: alexnet.cpp  architectures.cpp  backup.cpp  batchnorm2d.cpp  cnn.cpp  conv2d.cpp  data_format.cpp  dropout.cpp  func.cpp  grad_cam.cpp  inference.cpp  linear.cpp  metrics.cpp  pipeline.cpp  pool2d.cpp  relu.cpp  run.bat  run_cnn.bat
cpu/src/test/: test.cpp
(+8 files in other folders)
